# BDR

./: .coveragerc  .dockerignore  .env.example  .fuse_hidden0000003900000001  .fuse_hidden0000003c00000002  .fuse_hidden0000004000000003  .fuse_hidden0000004200000004  .fuse_hidden0000004400000005  .fuse_hidden0000004600000006  .fuse_hidden0000004800000007  .fuse_hidden0000004a00000008  .fuse_hidden0000004c00000009  .fuse_hidden0000004e0000000a  .fuse_hidden000000500000000b  .fuse_hidden000000520000000c  .fuse_hidden000000540000000d  .fuse_hidden000000560000000e  .fuse_hidden000000580000000f  .fuse_hidden0000005a00000010  .fuse_hidden0000005c00000011  .gitattributes  .gitignore  AGENTS.md  BATCH3_PROSPECT_EXTRACTION.md  BATCH_5A_PROSPECTS.csv  BATCH_8_ANALYSIS_INDEX.txt  BDR-REPO-INDEX.md  BDR-REPO-SYNC-GUIDE.md  CLAUDE.md  Daily_Apollo_Sequence_Workflow.docx  Dockerfile  ENHANCEMENT_REPORT_2026-03-02.txt  EXECUTION-STATUS.md  EXTENSION_SUMMARY.md  EXTRACTION-SUMMARY.txt  FILE_INDEX_2026-03-02.txt  HANDOFF-BATCH8.md  MASTER_SENT_LIST.csv  README-research-index.md  README.md  (+94 more)
archive/old-code/: .dockerignore  BDR-REPO-INDEX.md  build_send_list.py  build_send_list_out.txt  build_viewer.py  check65.py  check_data_out.txt  check_raw65.py  check_raw65b.py  check_sections.py  contacts_list.json  email-follow-up-candidates.csv  emails_data.json  extract_emails.py  extract_prospects.py  get_emails2.py  get_emails2_out.txt  get_emails3.py  get_emails3_out.txt  get_emails_from_sources.py  outreach_b64.txt  pyproject.toml  read65.py  requirements.txt  sections_out.txt  send_list.json  (+3 more)
(+675 files in other folders)
